--- a/meta-client/package.json
+++ b/meta-client/package.json
@@ -11,9 +11,10 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "web3": "^1.3.5"
+    "web3": "^1.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
