--- a/meta-client/package.json
+++ b/meta-client/package.json
@@ -13,6 +13,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.2"
   },
