--- a/Meta_DeCenterland/package.json
+++ b/Meta_DeCenterland/package.json
@@ -1,6 +1,24 @@
 {
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.1",
+    "express": "^4.18.2",
+    "node": "^19.6.0",
+    "nodemon": "^2.0.20",
     "openzeppelin-solidity": "^3.4.2"
-  }
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev":"nodemon server"
+  },
+  "name": "meta_decenterland",
+  "version": "1.0.0",
+  "main": "server.js",
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
