--- a/meta-client/package.json
+++ b/meta-client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meta-client",
   "version": "0.1.0",
-  "proxy" : "http://localhost:5001",
+  "proxy": "http://localhost:5001",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0",
+    "react-loading-components": "^1.1.12",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
