--- a/Meta_DeCenterland/package.json
+++ b/Meta_DeCenterland/package.json
@@ -4,11 +4,12 @@
     "express": "^4.18.2",
     "node": "^19.6.0",
     "nodemon": "^2.0.20",
-    "openzeppelin-solidity": "^3.4.2"
+    "openzeppelin-solidity": "^3.4.2",
+    "web3": "^1.8.2"
   },
   "scripts": {
     "start": "node server.js",
-    "dev":"nodemon server"
+    "dev": "nodemon server"
   },
   "name": "meta_decenterland",
   "version": "1.0.0",
@@ -16,7 +17,6 @@
   "directories": {
     "test": "test"
   },
-  "devDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
