--- a/Meta_DeCenterland/package.json
+++ b/Meta_DeCenterland/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server"
+    "dev": "nodemon server",
+    "dev2": "nodemon server2"
   },
   "name": "meta_decenterland",
   "version": "1.0.0",
