--- a/meta-client/package.json
+++ b/meta-client/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
+    "truffle": "^5.7.8",
+    "truffle-contract": "^4.0.31",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.2"
   },
